# SEO-auditor

./: .gitignore  README.md  main.py  netlify.toml  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
app/: branded_report.py  cache.py  config.py  crawler.py  database.py  db_models.py  external_models.py  fetcher.py  models.py  rate_limit.py  report.py  schema_defs.py  scoring.py  summary.py  utils.py
app/analyzers/: __init__.py  accessibility.py  ads_quality.py  crawl.py  headings.py  images.py  keyword_suggestions.py  links.py  meta_tags.py  mobile.py  pagespeed_insights.py  performance.py  robots.py  schema_org.py  schema_validator.py  search_intel.py  semantic.py  serp_features.py  sitemap.py  sitemap_export.py  structured_data.py  tag_discovery.py  tag_signatures.py  tracking.py  traffic_intel.py
app/exporters/: spreadsheet.py
app/providers/: __init__.py  base.py  google_ads_keywords.py  pagespeed.py  semrush.py  similarweb.py
app/providers/enrichment/: __init__.py  auto_fetch.py  base.py  manual.py
app/services/: job_manager.py
netlify/functions/: api.py  requirements.txt
static/: index.html
static/css/: styles.css
static/js/: app.js  components.js  store.js
tests/: test_integration.py  test_keywords.py  test_pagespeed.py  test_platform.py  test_providers.py  test_schema_validator.py  test_utils.py
