[project]
name = "seo-auditor"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "mangum==0.19.0",
    "requests==2.32.0",
    "certifi",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.0",
    "fpdf2==2.8.1",
    "extruct==0.17.0",
    "sqlalchemy==2.0.36",
    "python-multipart==0.0.12",
    "aiofiles==24.1.0",
    "openpyxl>=3.1.0",
]
